MARP-2100 ProcessAnalyzer Implement more alternatives (#97)